# ansible-taskrunner

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Makefile.yaml  README.md  README.rst  Taskfile.yaml  build.yaml  config.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup.yaml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
ansible_taskrunner/: __init__.py  cli.py  config.py  defaults.py  logger.py  setup.cx_freeze.py
ansible_taskrunner/files/: start-tutorial.bat  tasks-console.bat
ansible_taskrunner/files/cfg/: default.ini
ansible_taskrunner/files/macros/: default.mac
ansible_taskrunner/lib/bash/: __init__.py
ansible_taskrunner/lib/click_extras/: __init__.py
ansible_taskrunner/lib/cliutil/: __init__.py
ansible_taskrunner/lib/errorhandler/: __init__.py
ansible_taskrunner/lib/formatting/: __init__.py
ansible_taskrunner/lib/help/: __init__.py
ansible_taskrunner/lib/language/: __init__.py
ansible_taskrunner/lib/proc_mgmt/: __init__.py
ansible_taskrunner/lib/providers/: ansible.py  bash.py  vagrant.py
ansible_taskrunner/lib/sshutil/: client.py  sync.py
ansible_taskrunner/lib/superduperconfig/: __init__.py
ansible_taskrunner/lib/vagrant/: __init__.py
ansible_taskrunner/lib/yamlc/: __init__.py
ansible_taskrunner/lib/yamlr/: __init__.py
ansible_taskrunner/libs/bastion_mode/: __init__.py
ansible_taskrunner/libs/cli/: __init__.py  click_commands_create_entrypoint.py  click_commands_create_group.py  click_commands_create_init.py  click_commands_create_sub.py  click_commands_init_sub.py  invocation.py
ansible_taskrunner/libs/click_extras/: __init__.py  help.py  options_advanced.py  options_processor.py
ansible_taskrunner/libs/cliutil/: __init__.py
ansible_taskrunner/libs/errorhandler/: __init__.py
ansible_taskrunner/libs/help/: __init__.py
ansible_taskrunner/libs/language/: __init__.py  en.yaml
ansible_taskrunner/libs/logger/: __init__.py
ansible_taskrunner/libs/proc_mgmt/: __init__.py
ansible_taskrunner/libs/providers/: ansible.py  bash.py  vagrant.py
ansible_taskrunner/libs/sshutil/: client.py  sync.py
ansible_taskrunner/libs/superduperconfig/: __init__.py
ansible_taskrunner/plugins/: __init__.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/ansible/: README.md  Taskfile.yaml  config.yaml
examples/bash/: README.md  Taskfile.yaml  config.yaml
examples/choice/: Taskfile.yaml
examples/custom-cli-provider/: README.md  Taskfile.yaml  config.yaml  dynamic-import.py
examples/mutually-exclusive/: Taskfile.yaml
examples/plugins/providers/example/: __init__.py
examples/prompt/: Taskfile.yaml
examples/vagrant/: README.md  Taskfile.yaml  Vagrantfile
lib/common/click_extras/: __init__.py
lib/common/errorhandler/: __init__.py
lib/common/formatting/: __init__.py
lib/common/help/: __init__.py
lib/common/providers/ansible/: __init__.py
lib/common/providers/bash/: __init__.py
lib/common/providers/vagrant/: __init__.py
lib/common/yamlc/: __init__.py
lib/common/yamlr/: __init__.py
plugins/: __init__.py
tests/: __init__.py  test_ansible_taskrunner.py
(+1 files in other folders)
