[metadata]
name = ansible_taskrunner
author = Engelbert Tejeda
author_email = berttejeda@gmail.com
description = ansible-playbook wrapper with YAML-abstracted python click cli options
version: 1.3.2
url = https://github.com/berttejeda/ansible_taskrunner
keywords =
  ansible 
  playbook
  wrapper
  bash
  python
  click
  task-runner
  subprocess
  yaml
  cli
  options
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 2.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
  wheel >= 0.31
packages = find:
zip_safe: False
scripts =
#  somescript.py
install_requires =
  click==6.7
  crayons==0.2.0
  PyYAML==4.2b1
  paramiko==2.6.0; sys_platform == 'win32' or sys_platform == 'cygwin'

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  tasks=ansible_taskrunner.cli:cli