[check-manifest]
ignore =
    Dockerfile
    entrypoint.sh
    openssl.cnf
    
[metadata]
name = ansible_taskrunner
author = Engelbert Tejeda
author_email = etejeda@tecknicos.com
description = Ansible Task Runner
version = file: VERSION.txt
url = https://github.com/berttejeda/ansible-taskrunner.git
keywords =
  ansible 
  playbook
  wrapper
  bash
  python
  click
  task-runner
  subprocess
  yaml
  cli
  options
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7  
  Programming Language :: Python :: 3.10
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
include_package_data = true
python_requires = >= 2.7
setup_requires =
  setuptools >= 63.4.1
  pip >= 22.1.2
  wheel >= 0.37.1
packages = find:
zip_safe: False
scripts =
#  somescript.py
install_requires =
  bertdotconfig>=4.3.0,<4.4.0
  click>=8.1.3,<9.0.0
  colorama==0.4.3
  coloredlogs>=15.0.0,<16.0.0
  getversion==1.0.2
  PyYAML>=6.0,<7.0
  paramiko==2.10.1; sys_platform == 'win32' or sys_platform == 'cygwin'

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  tasks=ansible_taskrunner.cli:cli

[options.data_files]